# repo-scan

./: .gitignore  .pre-commit-config.yaml  .repo-scan.json  HANDOFF.md  README.md  pyproject.toml  repo_scan.py  repo_scan_README.md  setup.py
.cursor/rules/: dashboard-ground-truth.mdc  vault-citations.mdc
.github/workflows/: ci.yml
docs/: NORTH_STAR.md  RADAR_CONTEXT.md  digest.md  index.md  scan.json
docs/architecture/: agentic-loop.md  dependency-graph.md  graph-viewer-roadmap.md
docs/changelog/: 2026-06-09-assessment-hardening.md  2026-06-09-loop.md  2026-06-09-no-emoji-docs.md  2026-06-09-obsidian-graph.md  2026-06-09-pagerank-ranking.md  2026-06-09-phase-a.md  2026-06-09-phase-a2-split.md  2026-06-09-phase-b1-ingest.md  2026-06-09-phase-b2-research.md  2026-06-09-phase-b3-loop.md  2026-06-09-phase-b4-autonomy.md  2026-06-09-portability-fixes.md  2026-06-09-visual-layer.md  2026-06-10-act-doc-drift.md  2026-06-10-act-stage.md  2026-06-10-act.md  2026-06-10-agent-factory.md  2026-06-10-agent-feedback.md  2026-06-10-behavior-and-tickets.md  2026-06-10-gate-drawer.md  2026-06-10-hub-loading-states.md  2026-06-10-hub-sse.md  2026-06-10-intent-governance.md  2026-06-10-live-run-panel.md  2026-06-10-llm-liveness.md  2026-06-10-llm-null-byte-fix.md  2026-06-10-loop.md  2026-06-10-mobile-hub.md  2026-06-10-now-tab-layout.md  2026-06-10-parallel-loops.md  2026-06-10-phase-c3-workflow.md  2026-06-10-phase2-freshness.md  2026-06-10-pipeline-telemetry.md  2026-06-10-pr-merge-ui.md  2026-06-10-pr-remediate.md  2026-06-10-repo-snapshot.md  2026-06-10-tkt-0001-writers-refactor.md  2026-06-10-vault-autocommit.md  2026-06-11-boundary-hardening.md  2026-06-11-citation-scanner.md  (+5 more)
docs/planning/: HANDOFF_06_10_2026_Repo_Reorg.md  README.md  phase-1-week1.md  phase-2-week2.md  phase-3-week3.md  phase-4-week4.md  phase-5-week5.md
docs/reports/: calls.md  coupling.md  dependencies.md  health.md  trend.md
docs/research/: candidates.md  decisions.md  index.md  tags.md  theory.md
docs/specs/: 2026-06-09-should-repo-scan-replace-its-heuristic-i-spec.md  2026-06-10-add-a-list-for-the-open-tickets-to-the-n-spec.md  2026-06-10-convert-tickets-to-most-human-friendly-t-spec.md  2026-06-10-hidden-seam-pyproject-toml-setup-py-100-spec.md  2026-06-10-hidden-seam-repo-scan-config-py-repo-sca-spec.md  2026-06-10-hidden-seam-repo-scan-hub-daemon-py-test-spec.md  2026-06-10-hidden-seam-repo-scan-hub-server-py-repo-spec.md  2026-06-10-hidden-seam-repo-scan-radar-cli-py-repo-spec.md  2026-06-10-hidden-seam-repo-scan-scanner-py-repo-sc-spec.md  2026-06-10-i-want-to-add-a-more-robust-way-to-visua-spec.md  2026-06-10-move-the-agentic-loop-graph-and-untracke-spec.md  (+10 more)
repo_scan/: __init__.py  behavior.py  churn.py  citations.py  cli.py  complexity.py  config.py  digest.py  frontmatter.py  graphs.py  handoff.py  hooks.py  identity.py  languages.py  provenance.py  provenance_audit.py  provenance_lint.py  ranking.py  report_pipeline.py  scanner.py  tests_map.py  tickets.py  trends.py  utils.py  writers.py
tests/: conftest.py  fake_llm.py  test_act.py  test_agentic_loop_mermaid.py  test_behavior.py  test_citations.py  test_daemon.py  test_gate_drawer.py  test_graphs.py  test_hub.py  test_hub_act_run.py  test_hub_contract.py  test_hub_graph.py  test_hub_settings.py  test_hub_ui.py  test_intent_governance.py  test_languages.py  test_lazy_imports.py  test_llm_routing.py  test_orphan_autolinker.py  test_packaging.py  test_phase2_freshness.py  test_phase_a.py  test_portability.py  test_provenance.py  test_provenance_audit.py  test_provenance_lint.py  test_prs.py  test_radar_cli_gates.py  test_radar_full.py  test_radar_gates.py  test_radar_ingest.py  test_radar_llm.py  test_radar_pipeline.py  test_repo_snapshot.py  test_report_pipeline.py  test_scan.py  test_scan_schema.py  test_scanner_snapshots.py  test_scanner_unit.py  (+12 more)
(+213 files in other folders)
