[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-scan"
version = "0.2.0"
description = "Repo intelligence tool"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repo-scan = "repo_scan:main"
radar = "repo_scan.radar.cli:main"

[tool.setuptools]
packages = ["repo_scan", "repo_scan.radar"]
